# Application-development

./: CMakeLists.txt  main.cpp
common/: CommonDefines.h
game/: Game.cpp  Game.h
game/config/: GameCfg.h
game/entities/: Hero.cpp  Hero.h  Wheel.cpp  Wheel.h
manager_utils/include/manager_utils/cfg/: DrawMgrCfg.h  MgrHandlerCfg.h  ResMgrCfg.h
manager_utils/include/manager_utils/drawing/: Image.h  Text.h  Widget.h
manager_utils/include/manager_utils/managers/: DrawMgr.h  MgrBase.h  MgrHandler.h  ResMgr.h
manager_utils/src/drawing/: Image.cpp  Text.cpp  Widget.cpp
manager_utils/src/managers/: DrawMgr.cpp  MgrHandler.cpp  ResMgr.cpp
sdl_utils/: InputEvent.cpp  InputEvent.h  MonitorWindow.cpp  MonitorWindow.h  Renderer.cpp  Renderer.h  SDLLoader.cpp  SDLLoader.h  Texture.cpp  Texture.h
sdl_utils/config/: ImageContainerCfg.h  MonitorWindowCfg.h  TextContainerCfg.h
sdl_utils/containers/: ImageContainer.cpp  ImageContainer.h  TextContainer.cpp  TextContainer.h
sdl_utils/time/: Time.cpp  Time.h
utils/drawing/: Color.cpp  Color.h  DrawParams.cpp  DrawParams.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h
utils/thread/: ThreadUtils.cpp  ThreadUtils.h
